Fixed cart visibility problem

--- a/src/app/navbar-top/cart/cart.component.scss
+++ b/src/app/navbar-top/cart/cart.component.scss
@@ -11,7 +11,6 @@
   color: #2f2f2f !important;
   background-color: #ffffff !important;
   opacity: 1;
-  visibility: visible;
   list-style: none;
   margin: 0;
   padding: 0;
